// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader in RTL renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-10 h-10 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-10 h-10 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-10 h-10 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loader in RTL renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-10 h-10 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loader in RTL renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        dir="rtl"
      >
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-4 h-4 relative rounded-full"
        >
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-6 h-6 relative rounded-full"
        >
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-8 h-8 relative rounded-full"
        >
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-10 h-10 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
        <div
          aria-busy="true"
          aria-label="loading"
          class="w-12 h-12 relative rounded-full"
        >
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.45s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.3s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
            style="animation-delay: -0.15s;"
          />
          <div
            class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
            role="presentation"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      dir="rtl"
    >
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-4 h-4 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-6 h-6 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-8 h-8 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-12 h-12 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loader renders Colors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-10 h-10 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-dodoria block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-10 h-10 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-trunks block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-10 h-10 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-raditz block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loader renders Default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-10 h-10 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Loader renders Sizes 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-4 h-4 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-6 h-6 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-8 h-8 relative rounded-full"
      >
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-10 h-10 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
      <div
        aria-busy="true"
        aria-label="loading"
        class="w-12 h-12 relative rounded-full"
      >
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.45s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.3s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
          style="animation-delay: -0.15s;"
        />
        <div
          class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
          role="presentation"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-4 h-4 relative rounded-full"
    >
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-6 h-6 relative rounded-full"
    >
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-8 h-8 relative rounded-full"
    >
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-2 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-10 h-10 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
    <div
      aria-busy="true"
      aria-label="loading"
      class="w-12 h-12 relative rounded-full"
    >
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.45s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.3s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
        style="animation-delay: -0.15s;"
      />
      <div
        class="border-4 border-solid border-hit block absolute w-full h-full rounded-[50%] animate-[rotation_1.2s_cubic-bezier(0.5,0,0.5,1)_infinite] border-r-transparent border-b-transparent border-l-transparent"
        role="presentation"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
